[tool.poetry]
name = "prcpy"
version = "0.1.12"
description = ""
authors = ["Harry Youel <harry.youel.19@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
